src/objects/CashVerification__c.object
<CustomObject>
    <fields>
        <fullName>AutoUpdateFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoUpdateFlg(System)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseDeposit__c</fullName>
        <label>現金入金</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CasePayment__c</fullName>
        <label>現金出金</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CashAmountAct__c</fullName>
        <label>現金有高[現物]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CashAmountLogic__c</fullName>
        <label>現金有高[論理]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CashSales__c</fullName>
        <label>売上現金</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FiftyCashNums__c</fullName>
        <label>手許有高（50）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiftyMachNums__c</fullName>
        <label>機械有高（50）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiveCashNums__c</fullName>
        <label>手許有高（5）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiveHundredCashNums__c</fullName>
        <label>手許有高（500）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiveHundredMachNums__c</fullName>
        <label>機械有高（500）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiveMachNums__c</fullName>
        <label>機械有高（5）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiveThousandCashNums__c</fullName>
        <label>手許有高（5千）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiveThousandMachNums__c</fullName>
        <label>機械有高（5千）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsLockFlg__c</fullName>
        <formula>RsvAccountRef__r.IsLockFlg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$ロックフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedByUser__c</fullName>
        <formula>LastModifiedBy.LastName &amp; &quot; &quot; &amp; LastModifiedBy.FirstName</formula>
        <label>最終更新者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>LastModifiedDate</formula>
        <label>最終更新日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OneCashNums__c</fullName>
        <label>手許有高（1）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneHundredCashNums__c</fullName>
        <label>手許有高（100）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneHundredMachNums__c</fullName>
        <label>機械有高（100）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneMachNums__c</fullName>
        <label>機械有高（1）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneThousandCashNums__c</fullName>
        <label>手許有高（1千）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneThousandMachNums__c</fullName>
        <label>機械有高（1千）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POSNo__c</fullName>
        <label>POSNo.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReserveFund__c</fullName>
        <label>準備金</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RsvAccountRef__c</fullName>
        <label>売上計上日</label>
        <referenceTo>RsvAccount__c</referenceTo>
        <relationshipName>CashVerifyRsvAccountRef</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SalesDateCal__c</fullName>
        <formula>IF(
ISNULL(RsvAccountRef__r.Salesday__c ),
    &quot;&quot;,
    TEXT(YEAR(RsvAccountRef__r.Salesday__c )) &amp; &quot;/&quot; &amp; 
    IF(MONTH(RsvAccountRef__r.Salesday__c ) &lt; 10, 
        &quot;0&quot;&amp;TEXT(MONTH(RsvAccountRef__r.Salesday__c )), 
        TEXT(MONTH(RsvAccountRef__r.Salesday__c ))) &amp; &quot;/&quot; &amp; 
    IF ( DAY(RsvAccountRef__r.Salesday__c ) &lt; 10, 
        &quot;0&quot;&amp;TEXT(DAY(RsvAccountRef__r.Salesday__c )), 
        TEXT(DAY(RsvAccountRef__r.Salesday__c ))) &amp; 
    CASE( MOD(RsvAccountRef__r.Salesday__c  - DATE(1900, 1, 7), 7),
        0, &apos;(日)&apos;,
        1, &apos;(月)&apos;,
        2, &apos;(火)&apos;,
        3, &apos;(水)&apos;,
        4, &apos;(木)&apos;,
        5, &apos;(金) &apos;,
        &apos;(土)&apos;
    )
)</formula>
        <label>営業日付</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchKey__c</fullName>
        <description>売上計上日(YYYYMMDD) + &apos;_&apos; + 店舗コード</description>
        <externalId>true</externalId>
        <label>キー</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ShopInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>店舗情報</label>
        <referenceTo>ShopInformation__c</referenceTo>
        <relationshipName>CashVerifyShopInfoRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TenCashNums__c</fullName>
        <label>手許有高（10）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TenMachNums__c</fullName>
        <label>機械有高（10）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TenThousandCashNums__c</fullName>
        <label>手許有高（1万）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TenThousandMachNums__c</fullName>
        <label>機械有高（1万）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TwoThousandCashNums__c</fullName>
        <label>手許有高（2千）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TwoThousandMachNums__c</fullName>
        <label>機械有高（2千）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>現金合せ</label>
    <nameField>
        <displayFormat>{YYYYMMDD}-{000000}</displayFormat>
        <label>番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>